# aerosync-acpica

./: CMakeLists.txt  README.md  acpica.cmake
source/components/utilities/: utclib.c  utprint.c
source/include/: acrestyp.h  actypes.h
source/include/platform/: acaerosync.h  acenv.h
